# gdextension-codegen

./: CMakeLists.txt  Readme.md
include/code_gen/: class_parser.h  defines.h  logging.h  string_utils.h
src/: class.c  main.c  string_utils.c
